fix 1 and 2 John hyperlinks

--- a/final product/OEBPS/1ES.xhtml
+++ b/final product/OEBPS/1ES.xhtml
@@ -1175,7 +1175,7 @@
 <aside epub:type='footnote' id="FN122"><p class="f"><a class="notebackref" href="#E14_36"><span class="notemark">*</span> 4.36</a>
  <span class="ft">Or, <span class='add'>praiseth the truth</span>, Athanasius.</span></p></aside>
 <aside epub:type='footnote' id="FN123"><p class="f"><a class="notebackref" href="#E14_37"><span class="notemark">m</span> 4.37</a>
- <span class="ft">So <a href='JHN.xhtml#JN8_44'>John 8. 44</a>. <a href='1JN.xhtml#1JN2_4'>1 John 2. 4</a>.</span></p></aside>
+ <span class="ft">So <a href='JHN.xhtml#JN8_44'>John 8. 44</a>. <a href='1JN.xhtml#J12_4'>1 John 2. 4</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN124"><p class="f"><a class="notebackref" href="#E14_39"><span class="notemark">n</span> 4.39</a>
  <span class="ft"><a href='WIS.xhtml#WS6_7'>Wisd. 6. 7</a>. <a href='SIR.xhtml#SR35_12'>Ecclus. 35. 12–16</a>. See <a href='DEU.xhtml#DT10_17'>Deut. 10. 17</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN125"><p class="f"><a class="notebackref" href="#E14_39"><span class="notemark">o</span> 4.39</a>
