--- a/final product/OEBPS/1KI.xhtml
+++ b/final product/OEBPS/1KI.xhtml
@@ -1332,7 +1332,7 @@
 <aside epub:type='footnote' id="FN154"><p class="f"><a class="notebackref" href="#K18_45"><span class="notemark">∥</span> 8.45</a>
  <span class="ft">Or, right.</span></p></aside>
 <aside epub:type='footnote' id="FN155"><p class="f"><a class="notebackref" href="#K18_46"><span class="notemark">*</span> 8.46</a>
- <span class="ft">2 Chr. <a href='2CH.xhtml#R26_36'>6. 36</a>. Eccles. <a href='ECC.xhtml#EC7_22'>7. 22</a>. 1 John 1. <a href='1JN.xhtml#1JN1_8'>8</a>, <a href='1JN.xhtml#1JN1_10'>10</a>.</span></p></aside>
+ <span class="ft">2 Chr. <a href='2CH.xhtml#R26_36'>6. 36</a>. Eccles. <a href='ECC.xhtml#EC7_22'>7. 22</a>. 1 John 1. <a href='1JN.xhtml#J11_8'>8</a>, <a href='1JN.xhtml#J11_10'>10</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN156"><p class="f"><a class="notebackref" href="#K18_47"><span class="notemark">†</span> 8.47</a>
  <span class="ft">Heb. bring back to their heart.</span></p></aside>
 <aside epub:type='footnote' id="FN157"><p class="f"><a class="notebackref" href="#K18_49"><span class="notemark">∥</span> 8.49</a>
