--- a/final product/OEBPS/2CH.xhtml
+++ b/final product/OEBPS/2CH.xhtml
@@ -1272,7 +1272,7 @@
 <aside epub:type='footnote' id="FN94"><p class="f"><a class="notebackref" href="#R26_35"><span class="notemark">∥</span> 6.35</a>
  <span class="ft">Or, right.</span></p></aside>
 <aside epub:type='footnote' id="FN95"><p class="f"><a class="notebackref" href="#R26_36"><span class="notemark">*</span> 6.36</a>
- <span class="ft">Prov. <a href='PRO.xhtml#PR20_9'>20 9</a>. Eccles. <a href='ECC.xhtml#EC7_21'>7. 21</a>. James <a href='JAS.xhtml#JM3_2'>3. 2</a>. 1 John <a href='1JN.xhtml#1JN1_8'>1. 8</a>.</span></p></aside>
+ <span class="ft">Prov. <a href='PRO.xhtml#PR20_9'>20 9</a>. Eccles. <a href='ECC.xhtml#EC7_21'>7. 21</a>. James <a href='JAS.xhtml#JM3_2'>3. 2</a>. 1 John <a href='1JN.xhtml#J11_8'>1. 8</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN96"><p class="f"><a class="notebackref" href="#R26_36"><span class="notemark">†</span> 6.36</a>
  <span class="ft">Heb. they that take them captives carry them away.</span></p></aside>
 <aside epub:type='footnote' id="FN97"><p class="f"><a class="notebackref" href="#R26_37"><span class="notemark">†</span> 6.37</a>
