--- a/final product/OEBPS/2ES.xhtml
+++ b/final product/OEBPS/2ES.xhtml
@@ -2202,9 +2202,9 @@
 <aside epub:type='footnote' id="FN202"><p class="f"><a class="notebackref" href="#E24_25"><span class="notemark">k</span> 4.25</a>
  <span class="ft"><a href='2ES.xhtml#E23_31'>ch. 3. 31–36</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN203"><p class="f"><a class="notebackref" href="#E24_26"><span class="notemark">m</span> 4.26</a>
- <span class="ft">See <a href='1JN.xhtml#1JN2_17'>1 John 2. 17</a>.</span></p></aside>
+ <span class="ft">See <a href='1JN.xhtml#J12_17'>1 John 2. 17</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN204"><p class="f"><a class="notebackref" href="#E24_27"><span class="notemark">n</span> 4.27</a>
- <span class="ft">So <a href='1JN.xhtml#1JN5_19'>1 John 5. 19</a>.</span></p></aside>
+ <span class="ft">So <a href='1JN.xhtml#J15_19'>1 John 5. 19</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN205"><p class="f"><a class="notebackref" href="#E24_30"><span class="notemark">o</span> 4.30</a>
  <span class="ft">See <a href='2ES.xhtml#E27_48'>ch. 7. 48</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN206"><p class="f"><a class="notebackref" href="#E24_30"><span class="notemark">p</span> 4.30</a>
@@ -3106,7 +3106,7 @@
 <aside epub:type='footnote' id="FN654"><p class="f"><a class="notebackref" href="#E213_22"><span class="notemark">e</span> 13.22</a>
  <span class="ft">Comp. <a href='2ES.xhtml#E213_16'>ver. 16</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN655"><p class="f"><a class="notebackref" href="#E213_23"><span class="notemark">g</span> 13.23</a>
- <span class="ft"><a href='1JN.xhtml#1JN5_18'>1 John 5. 18</a>.</span></p></aside>
+ <span class="ft"><a href='1JN.xhtml#J15_18'>1 John 5. 18</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN656"><p class="f"><a class="notebackref" href="#E213_23"><span class="notemark">f</span> 13.23</a>
  <span class="ft"><a href='2ES.xhtml#E213_23'>ver. 23</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN657"><p class="f"><a class="notebackref" href="#E213_23"><span class="notemark">h</span> 13.23</a>
@@ -3272,7 +3272,7 @@
 <aside epub:type='footnote' id="FN737"><p class="f"><a class="notebackref" href="#E215_1"><span class="notemark">a</span> 15.1</a>
  <span class="ft">See <a href='NUM.xhtml#NU23_5'>Num. 23. 5</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN738"><p class="f"><a class="notebackref" href="#E215_2"><span class="notemark">b</span> 15.2</a>
- <span class="ft"><a href='2JN.xhtml#2JN1_12'>2 John 12</a>. So <a href='TOB.xhtml#TB7_14'>Tobit 7. 14</a> (Lat.).</span></p></aside>
+ <span class="ft"><a href='2JN.xhtml#J21_12'>2 John 12</a>. So <a href='TOB.xhtml#TB7_14'>Tobit 7. 14</a> (Lat.).</span></p></aside>
 <aside epub:type='footnote' id="FN739"><p class="f"><a class="notebackref" href="#E215_2"><span class="notemark">c</span> 15.2</a>
  <span class="ft">See <a href='REV.xhtml#RV22_6'>Rev. 22. 6</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN740"><p class="f"><a class="notebackref" href="#E215_4"><span class="notemark">d</span> 15.4</a>
