--- a/final product/OEBPS/ECC.xhtml
+++ b/final product/OEBPS/ECC.xhtml
@@ -495,7 +495,7 @@
 <aside epub:type='footnote' id="FN87"><p class="f"><a class="notebackref" href="#EC7_19"><span class="notemark">*</span> 7.19</a>
  <span class="ft">Prov. <a href='PRO.xhtml#PR21_22'>21. 22</a>. &amp;c <a href='PRO.xhtml#PR24_5'>24 5</a>. ch. <a href='ECC.xhtml#EC9_16'>9. 16</a></span></p></aside>
 <aside epub:type='footnote' id="FN88"><p class="f"><a class="notebackref" href="#EC7_20"><span class="notemark">*</span> 7.20</a>
- <span class="ft">1 Kin. <a href='1KI.xhtml#K18_46'>8. 46</a>. Prov. <a href='PRO.xhtml#PR20_9'>20. 9</a>. 1 John <a href='1JN.xhtml#1JN1_8'>1 8</a>.</span></p></aside>
+ <span class="ft">1 Kin. <a href='1KI.xhtml#K18_46'>8. 46</a>. Prov. <a href='PRO.xhtml#PR20_9'>20. 9</a>. 1 John <a href='1JN.xhtml#J11_8'>1 8</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN89"><p class="f"><a class="notebackref" href="#EC7_21"><span class="notemark">†</span> 7.21</a>
  <span class="ft">Heb. give not thine heart.</span></p></aside>
 <aside epub:type='footnote' id="FN90"><p class="f"><a class="notebackref" href="#EC7_25"><span class="notemark">†</span> 7.25</a>
