--- a/final product/OEBPS/GEN.xhtml
+++ b/final product/OEBPS/GEN.xhtml
@@ -2083,7 +2083,7 @@
 <aside epub:type='footnote' id="FN62"><p class="f"><a class="notebackref" href="#GN4_7"><span class="notemark">∥</span> 4.7</a>
  <span class="ft">Or, subject unto thee.</span></p></aside>
 <aside epub:type='footnote' id="FN63"><p class="f"><a class="notebackref" href="#GN4_8"><span class="notemark">*</span> 4.8</a>
- <span class="ft">Wisd. <a href='WIS.xhtml#WS10_3'>10. 3</a>. Matt. <a href='MAT.xhtml#MT23_35'>23. 35</a>. 1 John <a href='1JN.xhtml#1JN3_12'>3. 12</a>. Jude <a href='JUD.xhtml#JD1_11'>11</a>.</span></p></aside>
+ <span class="ft">Wisd. <a href='WIS.xhtml#WS10_3'>10. 3</a>. Matt. <a href='MAT.xhtml#MT23_35'>23. 35</a>. 1 John <a href='1JN.xhtml#J13_12'>3. 12</a>. Jude <a href='JUD.xhtml#JD1_11'>11</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN64"><p class="f"><a class="notebackref" href="#GN4_10"><span class="notemark">†</span> 4.10</a>
  <span class="ft">Heb. bloods.</span></p></aside>
 <aside epub:type='footnote' id="FN65"><p class="f"><a class="notebackref" href="#GN4_13"><span class="notemark">∥</span> 4.13</a>
