--- a/final product/OEBPS/ISA.xhtml
+++ b/final product/OEBPS/ISA.xhtml
@@ -3140,7 +3140,7 @@
 <aside epub:type='footnote' id="FN717"><p class="f"><a class="notebackref" href="#IS53_9"><span class="notemark">†</span> 53.9</a>
  <span class="ft">Heb. deaths.</span></p></aside>
 <aside epub:type='footnote' id="FN718"><p class="f"><a class="notebackref" href="#IS53_9"><span class="notemark">*</span> 53.9</a>
- <span class="ft">1 Pet. <a href='1PE.xhtml#P12_22'>2. 22</a>. 1 John <a href='1JN.xhtml#1JN3_5'>3. 5</a>.</span></p></aside>
+ <span class="ft">1 Pet. <a href='1PE.xhtml#P12_22'>2. 22</a>. 1 John <a href='1JN.xhtml#J13_5'>3. 5</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN719"><p class="f"><a class="notebackref" href="#IS53_10"><span class="notemark">∥</span> 53.10</a>
  <span class="ft">Or, when his soul shall make an offering.</span></p></aside>
 <aside epub:type='footnote' id="FN720"><p class="f"><a class="notebackref" href="#IS53_12"><span class="notemark">*</span> 53.12</a>
