--- a/final product/OEBPS/JDT.xhtml
+++ b/final product/OEBPS/JDT.xhtml
@@ -1664,7 +1664,7 @@
 <aside epub:type='footnote' id="FN468"><p class="f"><a class="notebackref" href="#JT16_17"><span class="notemark">i</span> 16.17</a>
  <span class="ft">See <a href='2CO.xhtml#C26_18'>2 Cor. 6. 18</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN469"><p class="f"><a class="notebackref" href="#JT16_17"><span class="notemark">c</span> 16.17</a>
- <span class="ft"><a href='ESG.xhtml#EG10_11'>Esther 10. 11</a>. <a href='MAT.xhtml#MT10_15'>Matt. 10. 15</a>. &amp; <a href='MAT.xhtml#MT11_22'>11. 22</a>, <a href='MAT.xhtml#MT11_24'>24</a>. &amp; <a href='MAT.xhtml#MT12_36'>12. 36</a>. <a href='MRK.xhtml#MK6_11'>Mark 6. 11</a>. <a href='2PE.xhtml#P22_9'>2 Pet. 2. 9</a>. &amp; <a href='2PE.xhtml#P23_7'>3. 7</a>. <a href='1JN.xhtml#1JN4_17'>1 John 4. 17</a>. So <a href='JUD.xhtml#JD1_6'>Jude 6</a>.</span></p></aside>
+ <span class="ft"><a href='ESG.xhtml#EG10_11'>Esther 10. 11</a>. <a href='MAT.xhtml#MT10_15'>Matt. 10. 15</a>. &amp; <a href='MAT.xhtml#MT11_22'>11. 22</a>, <a href='MAT.xhtml#MT11_24'>24</a>. &amp; <a href='MAT.xhtml#MT12_36'>12. 36</a>. <a href='MRK.xhtml#MK6_11'>Mark 6. 11</a>. <a href='2PE.xhtml#P22_9'>2 Pet. 2. 9</a>. &amp; <a href='2PE.xhtml#P23_7'>3. 7</a>. <a href='1JN.xhtml#J14_17'>1 John 4. 17</a>. So <a href='JUD.xhtml#JD1_6'>Jude 6</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN470"><p class="f"><a class="notebackref" href="#JT16_17"><span class="notemark">d</span> 16.17</a>
  <span class="ft">Comp. <a href='JOB.xhtml#JB14_22'>Job 14. 22</a>. <a href='ISA.xhtml#IS66_24'>Isai. 66. 24</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN471"><p class="f"><a class="notebackref" href="#JT16_19"><span class="notemark">e</span> 16.19</a>
