--- a/final product/OEBPS/JHN.xhtml
+++ b/final product/OEBPS/JHN.xhtml
@@ -1045,7 +1045,7 @@
 <aside epub:type='footnote' id="FN7"><p class="f"><a class="notebackref" href="#JN1_16"><span class="notemark">*</span> 1.16</a>
  <span class="ft">Col. <a href='COL.xhtml#CL1_19'>1. 19</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN8"><p class="f"><a class="notebackref" href="#JN1_18"><span class="notemark">*</span> 1.18</a>
- <span class="ft">1 Tim. <a href='1TI.xhtml#T16_16'>6 16</a>. 1 John <a href='1JN.xhtml#1JN4_12'>4. 12</a>.</span></p></aside>
+ <span class="ft">1 Tim. <a href='1TI.xhtml#T16_16'>6 16</a>. 1 John <a href='1JN.xhtml#J14_12'>4. 12</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN9"><p class="f"><a class="notebackref" href="#JN1_21"><span class="notemark">∥</span> 1.21</a>
  <span class="ft">Or, <span class="add">a prophet.</span></span></p></aside>
 <aside epub:type='footnote' id="FN10"><p class="f"><a class="notebackref" href="#JN1_23"><span class="notemark">*</span> 1.23</a>
@@ -1079,7 +1079,7 @@
 <aside epub:type='footnote' id="FN24"><p class="f"><a class="notebackref" href="#JN3_14"><span class="notemark">*</span> 3.14</a>
  <span class="ft">Num. <a href='NUM.xhtml#NU21_9'>21. 9</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN25"><p class="f"><a class="notebackref" href="#JN3_16"><span class="notemark">*</span> 3.16</a>
- <span class="ft">1 John <a href='1JN.xhtml#1JN4_9'>4. 9</a>.</span></p></aside>
+ <span class="ft">1 John <a href='1JN.xhtml#J14_9'>4. 9</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN26"><p class="f"><a class="notebackref" href="#JN3_17"><span class="notemark">*</span> 3.17</a>
  <span class="ft">ch. <a href='JHN.xhtml#JN12_47'>12. 47</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN27"><p class="f"><a class="notebackref" href="#JN3_19"><span class="notemark">*</span> 3.19</a>
@@ -1101,7 +1101,7 @@
 <aside epub:type='footnote' id="FN35"><p class="f"><a class="notebackref" href="#JN3_35"><span class="notemark">*</span> 3.35</a>
  <span class="ft">Matt. <a href='MAT.xhtml#MT11_27'>11. 27</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN36"><p class="f"><a class="notebackref" href="#JN3_36"><span class="notemark">*</span> 3.36</a>
- <span class="ft">Hab. <a href='HAB.xhtml#HK2_4'>2. 4</a>. 1 John <a href='1JN.xhtml#1JN5_10'>5. 10</a>.</span></p></aside>
+ <span class="ft">Hab. <a href='HAB.xhtml#HK2_4'>2. 4</a>. 1 John <a href='1JN.xhtml#J15_10'>5. 10</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN37"><p class="f"><a class="notebackref" href="#JN4_5"><span class="notemark">*</span> 4.5</a>
  <span class="ft">Gen. <a href='GEN.xhtml#GN33_19'>33. 19</a>. &amp; <a href='GEN.xhtml#GN48_22'>48. 22</a>. Josh. <a href='JOS.xhtml#JS24_32'>24. 32</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN38"><p class="f"><a class="notebackref" href="#JN4_20"><span class="notemark">*</span> 4.20</a>
@@ -1153,7 +1153,7 @@
 <aside epub:type='footnote' id="FN61"><p class="f"><a class="notebackref" href="#JN6_27"><span class="notemark">*</span> 6.27</a>
  <span class="ft">Matt. <a href='MAT.xhtml#MT3_17'>3. 17</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN62"><p class="f"><a class="notebackref" href="#JN6_29"><span class="notemark">*</span> 6.29</a>
- <span class="ft">1 John <a href='1JN.xhtml#1JN3_23'>3. 23</a>.</span></p></aside>
+ <span class="ft">1 John <a href='1JN.xhtml#J13_23'>3. 23</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN63"><p class="f"><a class="notebackref" href="#JN6_31"><span class="notemark">*</span> 6.31</a>
  <span class="ft">Ex. <a href='EXO.xhtml#EX16_15'>16. 15</a>. Num <a href='NUM.xhtml#NU11_7'>11. 7</a></span></p></aside>
 <aside epub:type='footnote' id="FN64"><p class="f"><a class="notebackref" href="#JN6_31"><span class="notemark">*</span> 6.31</a>
@@ -1219,9 +1219,9 @@
 <aside epub:type='footnote' id="FN94"><p class="f"><a class="notebackref" href="#JN8_34"><span class="notemark">*</span> 8.34</a>
  <span class="ft">Rom. <a href='ROM.xhtml#RM6_20'>6. 20</a>. 2 Pet. <a href='2PE.xhtml#P22_19'>2. 19</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN95"><p class="f"><a class="notebackref" href="#JN8_44"><span class="notemark">*</span> 8.44</a>
- <span class="ft">1 John <a href='1JN.xhtml#1JN3_8'>3. 8</a>.</span></p></aside>
+ <span class="ft">1 John <a href='1JN.xhtml#J13_8'>3. 8</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN96"><p class="f"><a class="notebackref" href="#JN8_47"><span class="notemark">*</span> 8.47</a>
- <span class="ft">1 John <a href='1JN.xhtml#1JN4_6'>4. 6</a>.</span></p></aside>
+ <span class="ft">1 John <a href='1JN.xhtml#J14_6'>4. 6</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN97"><p class="f"><a class="notebackref" href="#JN9_5"><span class="notemark">*</span> 9.5</a>
  <span class="ft">ch. <a href='JHN.xhtml#JN1_9'>1. 9</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN98"><p class="f"><a class="notebackref" href="#JN9_6"><span class="notemark">∥</span> 9.6</a>
@@ -1299,7 +1299,7 @@
 <aside epub:type='footnote' id="FN134"><p class="f"><a class="notebackref" href="#JN13_33"><span class="notemark">*</span> 13.33</a>
  <span class="ft">ch. <a href='JHN.xhtml#JN7_34'>7. 34</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN135"><p class="f"><a class="notebackref" href="#JN13_34"><span class="notemark">*</span> 13.34</a>
- <span class="ft">Lev. <a href='LEV.xhtml#LV19_18'>19. 18</a>. ch. 15. <a href='JHN.xhtml#JN15_12'>12</a>, <a href='JHN.xhtml#JN15_17'>17</a>. 1 John <a href='1JN.xhtml#1JN4_21'>4. 21</a>.</span></p></aside>
+ <span class="ft">Lev. <a href='LEV.xhtml#LV19_18'>19. 18</a>. ch. 15. <a href='JHN.xhtml#JN15_12'>12</a>, <a href='JHN.xhtml#JN15_17'>17</a>. 1 John <a href='1JN.xhtml#J14_21'>4. 21</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN136"><p class="f"><a class="notebackref" href="#JN13_37"><span class="notemark">*</span> 13.37</a>
  <span class="ft">Matt. <a href='MAT.xhtml#MT26_33'>26. 33</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN137"><p class="f"><a class="notebackref" href="#JN14_13"><span class="notemark">*</span> 14.13</a>
@@ -1313,7 +1313,7 @@
 <aside epub:type='footnote' id="FN141"><p class="f"><a class="notebackref" href="#JN15_5"><span class="notemark">∥</span> 15.5</a>
  <span class="ft">Or, <span class="add">severed from me.</span></span></p></aside>
 <aside epub:type='footnote' id="FN142"><p class="f"><a class="notebackref" href="#JN15_12"><span class="notemark">*</span> 15.12</a>
- <span class="ft">ch. <a href='JHN.xhtml#JN13_34'>13. 34</a>. 1 Thess. <a href='1TH.xhtml#H14_9'>4. 9</a>. 1 John <a href='1JN.xhtml#1JN3_11'>3. 11</a>.</span></p></aside>
+ <span class="ft">ch. <a href='JHN.xhtml#JN13_34'>13. 34</a>. 1 Thess. <a href='1TH.xhtml#H14_9'>4. 9</a>. 1 John <a href='1JN.xhtml#J13_11'>3. 11</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN143"><p class="f"><a class="notebackref" href="#JN15_16"><span class="notemark">*</span> 15.16</a>
  <span class="ft">Matt. <a href='MAT.xhtml#MT28_19'>28. 19</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN144"><p class="f"><a class="notebackref" href="#JN15_20"><span class="notemark">*</span> 15.20</a>
