--- a/final product/OEBPS/JOB.xhtml
+++ b/final product/OEBPS/JOB.xhtml
@@ -1685,7 +1685,7 @@
 <aside epub:type='footnote' id="FN187"><p class="f"><a class="notebackref" href="#JB15_8"><span class="notemark">*</span> 15.8</a>
  <span class="ft">Rom. <a href='ROM.xhtml#RM11_34'>11 34</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN188"><p class="f"><a class="notebackref" href="#JB15_14"><span class="notemark">*</span> 15.14</a>
- <span class="ft">1 Kings <a href='1KI.xhtml#K18_46'>8. 46</a> 2 Chr. <a href='2CH.xhtml#R26_36'>6. 36</a>. ch. <a href='JOB.xhtml#JB14_4'>14. 4</a> Ps. <a href='PSA.xhtml#PS14_3'>14. 3</a>. Prov. <a href='PRO.xhtml#PR20_9'>20. 9</a>. 1 John <a href='1JN.xhtml#1JN1_8'>1. 8</a>.</span></p></aside>
+ <span class="ft">1 Kings <a href='1KI.xhtml#K18_46'>8. 46</a> 2 Chr. <a href='2CH.xhtml#R26_36'>6. 36</a>. ch. <a href='JOB.xhtml#JB14_4'>14. 4</a> Ps. <a href='PSA.xhtml#PS14_3'>14. 3</a>. Prov. <a href='PRO.xhtml#PR20_9'>20. 9</a>. 1 John <a href='1JN.xhtml#J11_8'>1. 8</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN189"><p class="f"><a class="notebackref" href="#JB15_15"><span class="notemark">*</span> 15.15</a>
  <span class="ft">ch. <a href='JOB.xhtml#JB4_18'>4. 18</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN190"><p class="f"><a class="notebackref" href="#JB15_21"><span class="notemark">†</span> 15.21</a>
