--- a/final product/OEBPS/LEV.xhtml
+++ b/final product/OEBPS/LEV.xhtml
@@ -1393,7 +1393,7 @@
 <aside epub:type='footnote' id="FN156"><p class="f"><a class="notebackref" href="#LV19_15"><span class="notemark">*</span> 19.15</a>
  <span class="ft">Ex. <a href='EXO.xhtml#EX23_3'>23. 3</a>. Deut <a href='DEU.xhtml#DT1_17'>1. 17</a> &amp;c <a href='DEU.xhtml#DT16_19'>16 19</a>. Prov <a href='PRO.xhtml#PR24_23'>24. 23</a>. James <a href='JAS.xhtml#JM2_9'>2. 9</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN157"><p class="f"><a class="notebackref" href="#LV19_17"><span class="notemark">*</span> 19.17</a>
- <span class="ft">1 John <a href='1JN.xhtml#1JN2_11'>2. 11</a>. Matt. <a href='MAT.xhtml#MT18_15'>18. 15</a>. Ecclus. <a href='SIR.xhtml#SR19_13'>19. 13</a>.</span></p></aside>
+ <span class="ft">1 John <a href='1JN.xhtml#J12_11'>2. 11</a>. Matt. <a href='MAT.xhtml#MT18_15'>18. 15</a>. Ecclus. <a href='SIR.xhtml#SR19_13'>19. 13</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN158"><p class="f"><a class="notebackref" href="#LV19_17"><span class="notemark">∥</span> 19.17</a>
  <span class="ft">Or, that thou bear not sin for him.</span></p></aside>
 <aside epub:type='footnote' id="FN159"><p class="f"><a class="notebackref" href="#LV19_18"><span class="notemark">*</span> 19.18</a>
