--- a/final product/OEBPS/LUK.xhtml
+++ b/final product/OEBPS/LUK.xhtml
@@ -1430,7 +1430,7 @@
 <aside epub:type='footnote' id="FN38"><p class="f"><a class="notebackref" href="#LK3_8"><span class="notemark">∥</span> 3.8</a>
  <span class="ft">Or, <span class="add">meet for.</span></span></p></aside>
 <aside epub:type='footnote' id="FN39"><p class="f"><a class="notebackref" href="#LK3_11"><span class="notemark">*</span> 3.11</a>
- <span class="ft">James <a href='JAS.xhtml#JM2_15'>2. 15</a>. 1 John <a href='1JN.xhtml#1JN3_17'>3. 17</a>.</span></p></aside>
+ <span class="ft">James <a href='JAS.xhtml#JM2_15'>2. 15</a>. 1 John <a href='1JN.xhtml#J13_17'>3. 17</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN40"><p class="f"><a class="notebackref" href="#LK3_14"><span class="notemark">∥</span> 3.14</a>
  <span class="ft">Or, <span class="add">Put no man in fear.</span></span></p></aside>
 <aside epub:type='footnote' id="FN41"><p class="f"><a class="notebackref" href="#LK3_14"><span class="notemark">∥</span> 3.14</a>
