--- a/final product/OEBPS/MAT.xhtml
+++ b/final product/OEBPS/MAT.xhtml
@@ -1629,7 +1629,7 @@
 <aside epub:type='footnote' id="FN163"><p class="f"><a class="notebackref" href="#MT11_29"><span class="notemark">*</span> 11.29</a>
  <span class="ft">Jer. <a href='JER.xhtml#JR6_16'>6. 16</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN164"><p class="f"><a class="notebackref" href="#MT11_30"><span class="notemark">*</span> 11.30</a>
- <span class="ft">1 John <a href='1JN.xhtml#1JN5_3'>5. 3</a>.</span></p></aside>
+ <span class="ft">1 John <a href='1JN.xhtml#J15_3'>5. 3</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN165"><p class="f"><a class="notebackref" href="#MT12_1"><span class="notemark">*</span> 12.1</a>
  <span class="ft">Deut. <a href='DEU.xhtml#DT23_25'>23. 25</a>. Mark <a href='MRK.xhtml#MK2_23'>2. 23</a>. Luke <a href='LUK.xhtml#LK6_1'>6. 1</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN166"><p class="f"><a class="notebackref" href="#MT12_3"><span class="notemark">*</span> 12.3</a>
@@ -1653,7 +1653,7 @@
 <aside epub:type='footnote' id="FN175"><p class="f"><a class="notebackref" href="#MT12_24"><span class="notemark">*</span> 12.24</a>
  <span class="ft">ch. <a href='MAT.xhtml#MT9_34'>9. 34</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN176"><p class="f"><a class="notebackref" href="#MT12_31"><span class="notemark">*</span> 12.31</a>
- <span class="ft">Mark <a href='MRK.xhtml#MK3_28'>3. 28</a>. Luke <a href='LUK.xhtml#LK12_10'>12. 10</a>. 1 John <a href='1JN.xhtml#1JN5_16'>5. 16</a>.</span></p></aside>
+ <span class="ft">Mark <a href='MRK.xhtml#MK3_28'>3. 28</a>. Luke <a href='LUK.xhtml#LK12_10'>12. 10</a>. 1 John <a href='1JN.xhtml#J15_16'>5. 16</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN177"><p class="f"><a class="notebackref" href="#MT12_34"><span class="notemark">*</span> 12.34</a>
  <span class="ft">Luke <a href='LUK.xhtml#LK6_45'>6. 45</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN178"><p class="f"><a class="notebackref" href="#MT12_38"><span class="notemark">*</span> 12.38</a>
