--- a/final product/OEBPS/PSA.xhtml
+++ b/final product/OEBPS/PSA.xhtml
@@ -6150,7 +6150,7 @@
 <aside epub:type='footnote' id="FN275"><p class="f"><a class="notebackref" href="#PS32_1"><span class="notemark">*</span> 32.1</a>
  <span class="ft">Rom.<a href='ROM.xhtml#RM4_7'>4. 7</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN276"><p class="f"><a class="notebackref" href="#PS32_5"><span class="notemark">*</span> 32.5</a>
- <span class="ft">Prov. <a href='PRO.xhtml#PR28_13'>28. 13</a>. Is. <a href='ISA.xhtml#IS65_24'>65. 24</a>. 1 John <a href='1JN.xhtml#1JN1_9'>1. 9</a>.</span></p></aside>
+ <span class="ft">Prov. <a href='PRO.xhtml#PR28_13'>28. 13</a>. Is. <a href='ISA.xhtml#IS65_24'>65. 24</a>. 1 John <a href='1JN.xhtml#J11_9'>1. 9</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN277"><p class="f"><a class="notebackref" href="#PS32_6"><span class="notemark">†</span> 32.6</a>
  <span class="ft">Heb. in a time of finding.</span></p></aside>
 <aside epub:type='footnote' id="FN278"><p class="f"><a class="notebackref" href="#PS32_7"><span class="notemark">*</span> 32.7</a>
