--- a/final product/OEBPS/SIR.xhtml
+++ b/final product/OEBPS/SIR.xhtml
@@ -3058,7 +3058,7 @@
 <aside epub:type='footnote' id="FN72"><p class="f"><a class="notebackref" href="#SR2_14"><span class="notemark">t</span> 2.14</a>
  <span class="ft"><a href='EXO.xhtml#EX32_34'>Ex. 32. 34</a>. So <a href='SIR.xhtml#SR16_18'>ch. 16. 18</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN73"><p class="f"><a class="notebackref" href="#SR2_15"><span class="notemark">u</span> 2.15</a>
- <span class="ft"><a href='JHN.xhtml#JN14_23'>John 14. 23</a>. So <a href='1JN.xhtml#1JN2_5'>1 John 2. 5</a>.</span></p></aside>
+ <span class="ft"><a href='JHN.xhtml#JN14_23'>John 14. 23</a>. So <a href='1JN.xhtml#J12_5'>1 John 2. 5</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN74"><p class="f"><a class="notebackref" href="#SR2_17"><span class="notemark">x</span> 2.17</a>
  <span class="ft"><a href='PSA.xhtml#PS10_17'>Ps. 10. 17</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN75"><p class="f"><a class="notebackref" href="#SR2_18"><span class="notemark">y</span> 2.18</a>
@@ -3524,7 +3524,7 @@
 <aside epub:type='footnote' id="FN305"><p class="f"><a class="notebackref" href="#SR10_9"><span class="notemark">f</span> 10.9</a>
  <span class="ft">See <a href='SIR.xhtml#SR17_32'>ch. 17. 32</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN306"><p class="f"><a class="notebackref" href="#SR10_9"><span class="notemark">g</span> 10.9</a>
- <span class="ft">Comp. <a href='1JN.xhtml#1JN3_17'>1 John 3. 17</a>.</span></p></aside>
+ <span class="ft">Comp. <a href='1JN.xhtml#J13_17'>1 John 3. 17</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN307"><p class="f"><a class="notebackref" href="#SR10_10"><span class="notemark">h</span> 10.10</a>
  <span class="ft">So <a href='1MA.xhtml#M12_62'>1 Macc. 2. 62</a>, <a href='1MA.xhtml#M12_63'>63</a>. <a href='2MA.xhtml#M29_11'>2 Macc. 9. 11</a>, <a href='2MA.xhtml#M29_12'>12</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN308"><p class="f"><a class="notebackref" href="#SR10_11"><span class="notemark">h</span> 10.11</a>
@@ -3748,7 +3748,7 @@
 <aside epub:type='footnote' id="FN417"><p class="f"><a class="notebackref" href="#SR14_1"><span class="notemark">*</span> 14.1</a>
  <span class="ft">Or, <span class='add'>sorrow</span>.</span></p></aside>
 <aside epub:type='footnote' id="FN418"><p class="f"><a class="notebackref" href="#SR14_2"><span class="notemark">d</span> 14.2</a>
- <span class="ft">So <a href='ROM.xhtml#RM14_22'>Rom. 14. 22</a>. <a href='1JN.xhtml#1JN3_21'>1 John 3. 21</a>.</span></p></aside>
+ <span class="ft">So <a href='ROM.xhtml#RM14_22'>Rom. 14. 22</a>. <a href='1JN.xhtml#J13_21'>1 John 3. 21</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN419"><p class="f"><a class="notebackref" href="#SR14_4"><span class="notemark">e</span> 14.4</a>
  <span class="ft"><a href='SIR.xhtml#SR11_19'>ch. 11. 19</a>. <a href='SIR.xhtml#SR14_15'>ver. 15</a>. See <a href='PSA.xhtml#PS39_6'>Ps. 39. 6</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN420"><p class="f"><a class="notebackref" href="#SR14_7"><span class="notemark">f</span> 14.7</a>
@@ -4562,7 +4562,7 @@
 <aside epub:type='footnote' id="FN824"><p class="f"><a class="notebackref" href="#SR25_11"><span class="notemark">*</span> 25.11</a>
  <span class="ft">Or, <span class='add'>to whom</span>.</span></p></aside>
 <aside epub:type='footnote' id="FN825"><p class="f"><a class="notebackref" href="#SR25_12"><span class="notemark">o</span> 25.12</a>
- <span class="ft">So <a href='1JN.xhtml#1JN4_18'>1 John 4. 18</a>.</span></p></aside>
+ <span class="ft">So <a href='1JN.xhtml#J14_18'>1 John 4. 18</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN826"><p class="f"><a class="notebackref" href="#SR25_13"><span class="notemark">p</span> 25.13</a>
  <span class="ft"><a href='SIR.xhtml#SR25_23'>ver. 23</a> (Gk.). So <a href='PRO.xhtml#PR18_14'>Prov. 18. 14</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN827"><p class="f"><a class="notebackref" href="#SR25_13"><span class="notemark">q</span> 25.13</a>
@@ -5674,37 +5674,37 @@
 <aside epub:type='footnote' id="FN1380"><p class="f"><a class="notebackref" href="#SR41_16"><span class="notemark">n</span> 41.16</a>
  <span class="ft"><a href='SIR.xhtml#SR4_21'>ch. 4. 21</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN1381"><p class="f"><a class="notebackref" href="#SR41_17"><span class="notemark">o</span> 41.17</a>
- <span class="ft"><a href='1JN.xhtml#1JN2_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
+ <span class="ft"><a href='1JN.xhtml#J12_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
 <aside epub:type='footnote' id="FN1382"><p class="f"><a class="notebackref" href="#SR41_17"><span class="notemark">o</span> 41.17</a>
- <span class="ft"><a href='1JN.xhtml#1JN2_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
+ <span class="ft"><a href='1JN.xhtml#J12_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
 <aside epub:type='footnote' id="FN1383"><p class="f"><a class="notebackref" href="#SR41_18"><span class="notemark">o</span> 41.18</a>
- <span class="ft"><a href='1JN.xhtml#1JN2_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
+ <span class="ft"><a href='1JN.xhtml#J12_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
 <aside epub:type='footnote' id="FN1384"><p class="f"><a class="notebackref" href="#SR41_18"><span class="notemark">o</span> 41.18</a>
- <span class="ft"><a href='1JN.xhtml#1JN2_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
+ <span class="ft"><a href='1JN.xhtml#J12_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
 <aside epub:type='footnote' id="FN1385"><p class="f"><a class="notebackref" href="#SR41_18"><span class="notemark">o</span> 41.18</a>
- <span class="ft"><a href='1JN.xhtml#1JN2_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
+ <span class="ft"><a href='1JN.xhtml#J12_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
 <aside epub:type='footnote' id="FN1386"><p class="f"><a class="notebackref" href="#SR41_19"><span class="notemark">p</span> 41.19</a>
  <span class="ft">Comp. <a href='SIR.xhtml#SR42_7'>ch. 42. 7</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN1387"><p class="f"><a class="notebackref" href="#SR41_19"><span class="notemark">o</span> 41.19</a>
- <span class="ft"><a href='1JN.xhtml#1JN2_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
+ <span class="ft"><a href='1JN.xhtml#J12_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
 <aside epub:type='footnote' id="FN1388"><p class="f"><a class="notebackref" href="#SR41_19"><span class="notemark">o</span> 41.19</a>
- <span class="ft"><a href='1JN.xhtml#1JN2_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
+ <span class="ft"><a href='1JN.xhtml#J12_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
 <aside epub:type='footnote' id="FN1389"><p class="f"><a class="notebackref" href="#SR41_19"><span class="notemark">q</span> 41.19</a>
  <span class="ft">Comp. <a href='SIR.xhtml#SR42_2'>ch. 42. 2</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN1390"><p class="f"><a class="notebackref" href="#SR41_19"><span class="notemark">o</span> 41.19</a>
- <span class="ft"><a href='1JN.xhtml#1JN2_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
+ <span class="ft"><a href='1JN.xhtml#J12_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
 <aside epub:type='footnote' id="FN1391"><p class="f"><a class="notebackref" href="#SR41_19"><span class="notemark">o</span> 41.19</a>
- <span class="ft"><a href='1JN.xhtml#1JN2_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
+ <span class="ft"><a href='1JN.xhtml#J12_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
 <aside epub:type='footnote' id="FN1392"><p class="f"><a class="notebackref" href="#SR41_20"><span class="notemark">o</span> 41.20</a>
- <span class="ft"><a href='1JN.xhtml#1JN2_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
+ <span class="ft"><a href='1JN.xhtml#J12_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
 <aside epub:type='footnote' id="FN1393"><p class="f"><a class="notebackref" href="#SR41_20"><span class="notemark">o</span> 41.20</a>
- <span class="ft"><a href='1JN.xhtml#1JN2_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
+ <span class="ft"><a href='1JN.xhtml#J12_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
 <aside epub:type='footnote' id="FN1394"><p class="f"><a class="notebackref" href="#SR41_21"><span class="notemark">o</span> 41.21</a>
- <span class="ft"><a href='1JN.xhtml#1JN2_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
+ <span class="ft"><a href='1JN.xhtml#J12_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
 <aside epub:type='footnote' id="FN1395"><p class="f"><a class="notebackref" href="#SR41_21"><span class="notemark">o</span> 41.21</a>
- <span class="ft"><a href='1JN.xhtml#1JN2_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
+ <span class="ft"><a href='1JN.xhtml#J12_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
 <aside epub:type='footnote' id="FN1396"><p class="f"><a class="notebackref" href="#SR41_21"><span class="notemark">o</span> 41.21</a>
- <span class="ft"><a href='1JN.xhtml#1JN2_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
+ <span class="ft"><a href='1JN.xhtml#J12_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
 <aside epub:type='footnote' id="FN1397"><p class="f"><a class="notebackref" href="#SR41_21"><span class="notemark">r</span> 41.21</a>
  <span class="ft">See <a href='MAT.xhtml#MT5_28'>Matt. 5. 28</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN1398"><p class="f"><a class="notebackref" href="#SR41_21"><span class="notemark">s</span> 41.21</a>
@@ -5712,15 +5712,15 @@
 <aside epub:type='footnote' id="FN1399"><p class="f"><a class="notebackref" href="#SR41_22"><span class="notemark">t</span> 41.22</a>
  <span class="ft">So <a href='SIR.xhtml#SR22_20'>ch. 22. 20</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN1400"><p class="f"><a class="notebackref" href="#SR41_22"><span class="notemark">o</span> 41.22</a>
- <span class="ft"><a href='1JN.xhtml#1JN2_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
+ <span class="ft"><a href='1JN.xhtml#J12_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
 <aside epub:type='footnote' id="FN1401"><p class="f"><a class="notebackref" href="#SR41_22"><span class="notemark">u</span> 41.22</a>
  <span class="ft"><a href='SIR.xhtml#SR18_15'>ch. 18. 15</a>, <a href='SIR.xhtml#SR18_18'>18</a>. &amp; <a href='SIR.xhtml#SR20_15'>20. 15</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN1402"><p class="f"><a class="notebackref" href="#SR41_23"><span class="notemark">o</span> 41.23</a>
- <span class="ft"><a href='1JN.xhtml#1JN2_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
+ <span class="ft"><a href='1JN.xhtml#J12_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
 <aside epub:type='footnote' id="FN1403"><p class="f"><a class="notebackref" href="#SR41_23"><span class="notemark">x</span> 41.23</a>
  <span class="ft">So <a href='SIR.xhtml#SR19_7'>ch. 19. 7</a>, <a href='SIR.xhtml#SR19_14'>14</a> (Gk.).</span></p></aside>
 <aside epub:type='footnote' id="FN1404"><p class="f"><a class="notebackref" href="#SR41_23"><span class="notemark">o</span> 41.23</a>
- <span class="ft"><a href='1JN.xhtml#1JN2_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
+ <span class="ft"><a href='1JN.xhtml#J12_28'>1 John 2. 28</a> (Gk.).</span></p></aside>
 <aside epub:type='footnote' id="FN1405"><p class="f"><a class="notebackref" href="#SR41_23"><span class="notemark">y</span> 41.23</a>
  <span class="ft">See <a href='SIR.xhtml#SR22_22'>ch. 22. 22</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN1406"><p class="f"><a class="notebackref" href="#SR41_24"><span class="notemark">z</span> 41.24</a>
