--- a/final product/OEBPS/PRO.xhtml
+++ b/final product/OEBPS/PRO.xhtml
@@ -1806,7 +1806,7 @@
 <aside epub:type='footnote' id="FN342"><p class="f"><a class="notebackref" href="#PR20_7"><span class="notemark">*</span> 20.7</a>
  <span class="ft">Ps. <a href='PSA.xhtml#PS112_2'>112. 2</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN343"><p class="f"><a class="notebackref" href="#PR20_9"><span class="notemark">*</span> 20.9</a>
- <span class="ft">1 Kin. <a href='1KI.xhtml#K18_46'>8 46</a>. 2 Chr. <a href='2CH.xhtml#R26_36'>6. 36</a>. Job <a href='JOB.xhtml#JB14_4'>14. 4</a>. Ps. <a href='PSA.xhtml#PS51_5'>51. 5</a> Eccles. <a href='ECC.xhtml#EC7_20'>7. 20</a>. 1 John <a href='1JN.xhtml#1JN1_8'>1. 8</a>.</span></p></aside>
+ <span class="ft">1 Kin. <a href='1KI.xhtml#K18_46'>8 46</a>. 2 Chr. <a href='2CH.xhtml#R26_36'>6. 36</a>. Job <a href='JOB.xhtml#JB14_4'>14. 4</a>. Ps. <a href='PSA.xhtml#PS51_5'>51. 5</a> Eccles. <a href='ECC.xhtml#EC7_20'>7. 20</a>. 1 John <a href='1JN.xhtml#J11_8'>1. 8</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN344"><p class="f"><a class="notebackref" href="#PR20_10"><span class="notemark">*</span> 20.10</a>
  <span class="ft">Deut. <a href='DEU.xhtml#DT25_13'>25, 13</a>,&amp;c. ch <a href='PRO.xhtml#PR11_1'>11. 1</a>. &amp;c <a href='PRO.xhtml#PR16_11'>16. 11</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN345"><p class="f"><a class="notebackref" href="#PR20_10"><span class="notemark">†</span> 20.10</a>
@@ -2222,7 +2222,7 @@
 <aside epub:type='footnote' id="FN550"><p class="f"><a class="notebackref" href="#PR28_12"><span class="notemark">∥</span> 28.12</a>
  <span class="ft">Or, sought for.</span></p></aside>
 <aside epub:type='footnote' id="FN551"><p class="f"><a class="notebackref" href="#PR28_13"><span class="notemark">*</span> 28.13</a>
- <span class="ft">Ps. <a href='PSA.xhtml#PS32_5'>32. 5</a>. 1 John 1. <a href='1JN.xhtml#1JN1_9'>9</a>, <a href='1JN.xhtml#1JN1_10'>10</a>.</span></p></aside>
+ <span class="ft">Ps. <a href='PSA.xhtml#PS32_5'>32. 5</a>. 1 John 1. <a href='1JN.xhtml#J11_9'>9</a>, <a href='1JN.xhtml#J11_10'>10</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN552"><p class="f"><a class="notebackref" href="#PR28_14"><span class="notemark">*</span> 28.14</a>
  <span class="ft">Rom. <a href='ROM.xhtml#RM11_20'>11. 20</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN553"><p class="f"><a class="notebackref" href="#PR28_17"><span class="notemark">*</span> 28.17</a>
